--- a/index.html
+++ b/index.html
@@ -1,17 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tom's Trivia</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
 </head>
+
 <body>
-    
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12" style="height:50px"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10" style="text-align: center;">
+                <h1>Tom's Trivial Trivia</h1>
+                <hr>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <div class="row">
+                    <div class="col-md-12 button">
+                            <button type="button" class="btn btn-primary" id="start-button">Start</button>
+                    </div>
+                </div>
+                <div class="row question-bucket">
+                    <div class="col-md-12" id="question">This is the placeholder for the question</div>
+                </div>
+                <div class="row question-bucket">
+                    <div class="col-md-12" id="choice-1">This is the placeholder for the choice 1</div>
+                </div>
+                <div class="row question-bucket">
+                    <div class="col-md-12" id="choice-2">This is the placeholder for the choice 2</div>
+                </div>
+                <div class="row question-bucket">
+                    <div class="col-md-12" id="choice-3">This is the placeholder for the choice 3</div>
+                </div>
+
+                <div class="row question-bucket">
+                    <div class="col-md-12" id="choice-3">This is the placeholder for the choice 4</div>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" style="height:50px"> </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12" style="height:50px"> </div>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+        crossorigin="anonymous"></script>
     <script src="./assets/javascript/app.js"></script>
 </body>
+
 </html>
