--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-md-10">
                 <div class="row">
                     <div class="col-md-12 button">
-                            <button type="button" class="btn btn-primary" id="start-button">Start</button>
+                        <button type="button" class="btn btn-primary" id="start-button">Start</button>
                     </div>
                 </div>
                 <div class="row question-bucket">
@@ -61,7 +61,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
-    <script src="./assets/javascript/app.js"></script>
+    <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
