--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@
             <div class="col-md-1"></div>
             <div class="col-md-10">
                 <div class="row">
+                    <div class="col-md-12" id="instructions">
+                        These are the instructions of the game. Follow the rules and you will survive.
+                    </div>
+                </div>
+
+                <div class="row">
                     <div class="col-md-12 button">
                         <button type="button" class="btn btn-primary" id="start-button">Start</button>
                     </div>
+                </div>
+                <div class="row question-bucket">
+                    <div class="col-md-12" id="show-number"></div>
                 </div>
                 <div class="row question-bucket">
                     <div class="col-md-12" id="question">This is the placeholder for the question</div>
