deleted some of the old, refactored some of the new

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     <div class="col-md-12" id="show-number"></div>
                 </div>
                 <div class="row question-bucket">
+                    <div class="col-md-12" class="timer"></div>
+                </div>
+                <div class="row question-bucket">
                     <div class="col-md-12" id="question">This is the placeholder for the question</div>
                 </div>
                 <div class="row question-bucket">
