--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-md-10">
                 <div class="row">
                     <div class="col-md-12" id="instructions">
-                        These are the instructions of the game. Follow the rules and you will survive.
+                        These are the instructions of the game. Follow the rules and ye shall survive.
                     </div>
                 </div>
 
@@ -41,12 +41,12 @@
                     <div class="col-md-12" id="show-number"></div>
                 </div>
                 <div class="row question-bucket">
-                    <div class="col-md-12" class="timer"></div>
+                    <div class="col-md-12">Time left: <span class="timer"></span></div>
                 </div>
                 <div class="row question-bucket">
-                    <div class="col-md-12" id="question">This is the placeholder for the question</div>
+                    <div class="col-md-12 questions" id="question"></div>
                 </div>
-                <div class="row question-bucket">
+                <!-- <div class="row question-bucket">
                     <div class="col-md-12" id="choice-1">This is the placeholder for the choice 1</div>
                 </div>
                 <div class="row question-bucket">
@@ -58,7 +58,7 @@
 
                 <div class="row question-bucket">
                     <div class="col-md-12" id="choice-3">This is the placeholder for the choice 4</div>
-                </div>
+                </div> -->
             </div>
             <div class="col-md-1"></div>
         </div>
