somewhat working pieces

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <div class="col-md-10">
                 <div class="row">
                     <div class="col-md-12" id="instructions">
-                        These are the instructions of the game. Follow the rules and ye shall survive.
+                        These are the instructions of the game. <br> Follow the rules and ye shall survive. <br> Click
+                        start
+                        to begin. <br> Answer the question in the prescribed timeframe. <br> Go!
+
                     </div>
                 </div>
 
@@ -41,7 +44,7 @@
                     <div class="col-md-12" id="show-number"></div>
                 </div>
                 <div class="row question-bucket">
-                    <div class="col-md-12">Time left: <span class="timer"></span></div>
+                    <div class="col-md-12">Time left: <span class="timer">5</span></div>
                 </div>
                 <div class="row question-bucket">
                     <div class="col-md-12 questions" id="question"></div>
